Chapter 05 Security Boundaries/add-capabilities-container.yaml
apiVersion: v1
kind: Pod
metadata:
  name: add-capabilities-container
spec:
  containers:
    - name: nginx
      image: nginx:latest
      securityContext:
        capabilities:
          add:
            - NET_ADMIN   # Allow the container to configure networking.
            - SYS_TIME    # Allow the container to change the system clock.
